sumo/tests/netconvert/errors/XML/broken_edge/edge#shape__false4e/errors.netconvert
Error: The shape of edge '4' has only one entry.
Quitting (on error).
